add less config

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,10 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    body{
+      margin: 0;
+      background:#111;
+    }
+  </style>
 </html>
