--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Description: 
  * @Date: 2022-02-18 14:23:58
- * @LastEditTime: 2022-02-20 13:29:15
+ * @LastEditTime: 2022-02-22 17:08:47
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body onselectstart="return false">
+  <body onselectstart="return false" class="theme-light" style="margin: 0;">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
