♻️refactor: change name, icon

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!--
  * @Description: 
  * @Date: 2022-02-18 14:23:58
- * @LastEditTime: 2022-02-22 17:08:47
+ * @LastEditTime: 2022-02-22 18:01:49
 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/w.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Wordle</title>
   </head>
   <body onselectstart="return false" class="theme-light" style="margin: 0;">
     <div id="app"></div>
